--- a/src/news/2025/12/chrome-143/index.yml
+++ b/src/news/2025/12/chrome-143/index.yml
@@ -1,5 +1,5 @@
 title: 'What’s new in Chrome 143'
-alt: 'New in Chrome 143.'
+alt: 'Graphic with the text “New in Chrome” and the number “143”, alongside the Chrome logo on a yellow grid background.'
 description: 'New CSS features, WebGPU upgrades, and XSLT deprecation.'
 
 date: 2025-12-04
