--- a/src/news/2025/12/chrome-css-wrapped-2025/index.yml
+++ b/src/news/2025/12/chrome-css-wrapped-2025/index.yml
@@ -1,5 +1,5 @@
 title: 'Chrome’s CSS wrapped 2025'
-alt: 'CSS wrapped 2025.'
+alt: 'Playful illustration with colorful clay elements surrounding the text “CSS Wrapped 2025”, featuring icons like code brackets, floppy disks, chat bubbles, a keyboard, a light bulb, and a smiling character holding a Chrome logo.'
 description: 'Chrome’s seventeen groundbreaking CSS and UI features for 2025.'
 
 date: 2025-12-09
