--- a/src/news/2025/12/css-grid-lanes/index.yml
+++ b/src/news/2025/12/css-grid-lanes/index.yml
@@ -1,5 +1,5 @@
 title: 'Introducing CSS grid lanes'
-alt: 'Introducing CSS grid lanes.'
+alt: 'Graphic titled “Introducing CSS Grid Lanes”, showing a four-lane highway with numbered cars arranged in columns to illustrate grid lanes.'
 description: 'Native masonry-style layouts with grid lanes available for testing in Safari TP 234.'
 
 date: 2025-12-22
