--- a/src/news/2025/12/dialog-view-transitions/index.yml
+++ b/src/news/2025/12/dialog-view-transitions/index.yml
@@ -1,5 +1,5 @@
 title: 'Smooth view transitions for dialogs'
-alt: 'Dialog view transitions.'
+alt: 'Graphic titled “Dialog view transitions”, showing four cat photos with expand icons, a code snippet about startViewTransition, and the author’s portrait in the corner.'
 description: 'Combining modern web APIs for seamless UI animations.'
 
 date: 2025-12-18
