--- a/src/news/2025/12/firefox-146/index.yml
+++ b/src/news/2025/12/firefox-146/index.yml
@@ -1,5 +1,5 @@
 title: 'Firefox 146 release notes for developers'
-alt: 'Firefox 146.'
+alt: 'Screenshot of browser developer tools with a large Firefox logo overlaid and the text “Firefox 146”.'
 description: 'CSS and MathML improvements plus new APIs and Navigation API preview.'
 
 date: 2025-12-10
