--- a/src/news/2025/12/idrefs-in-html/index.yml
+++ b/src/news/2025/12/idrefs-in-html/index.yml
@@ -1,5 +1,5 @@
 title: 'IDREFs: what they are and how to use them'
-alt: 'HTMHell. Div, role, table, span. IDREFs: What they are and how to use them.'
+alt: 'Graphic labeled “HTMLhell” with a circular portrait surrounded by the words div, role, table, and span, and the headline “IDREFs: what they are and how to use them”.'
 description: 'How to build explicit HTML and ARIA relationships for accessibility.'
 
 date: 2025-12-19
