--- a/src/news/2025/12/jsdoc-typing-nuances/index.yml
+++ b/src/news/2025/12/jsdoc-typing-nuances/index.yml
@@ -1,5 +1,5 @@
 title: 'JSDoc as the ideal typing tool for JavaScript'
-alt: 'That HTML blog. The nuances of JavaScript typing using JSDoc.'
+alt: 'Graphic titled “That HTML Blog” with the headline “The Nuances of JavaScript Typing using JSDoc”, a circular portrait, and a code snippet showing class ReciprocalProperty.'
 description: 'JSDoc as the ideal typing tool for JavaScript and a simpler alternative to TypeScript.'
 
 date: 2025-12-05
