--- a/src/news/2025/12/non-square-image-blur-extensions/index.yml
+++ b/src/news/2025/12/non-square-image-blur-extensions/index.yml
@@ -1,5 +1,5 @@
 title: 'Non-square image blur extensions in CSS'
-alt: 'Non-square image blur extensions.'
+alt: 'Graphic with multiple photos and code snippets, centered headline reading “Non-Square Image Blur Extensions”.'
 description: 'How to pad portrait and landscape images with blurred edges using modern CSS.'
 
 date: 2025-12-03
