--- a/src/news/2025/12/pragmatic-guide-to-modern-css-colors/index.yml
+++ b/src/news/2025/12/pragmatic-guide-to-modern-css-colors/index.yml
@@ -1,5 +1,5 @@
 title: 'A pragmatic guide to modern CSS colors, part two'
-alt: 'A pragmatic guide to modern CSS colours - part two.'
+alt: 'Graphic with the headline “A pragmatic guide to modern CSS colours – part two”, showing a portrait, CSS code snippets, and color swatches labeled from 100 to 600.'
 description: 'Predictable color manipulation with modern CSS.'
 
 date: 2025-12-11
