--- a/src/news/2025/12/safari-26-2/index.yml
+++ b/src/news/2025/12/safari-26-2/index.yml
@@ -1,5 +1,5 @@
 title: 'WebKit Features for Safari 26.2'
-alt: 'WebKit Features for Safari 26.2.'
+alt: 'Graphic showing a Web Inspector performance timeline with the Safari compass icon and the headline “WebKit Features for Safari 26.2”.'
 description: 'Sixty two new features, CSS, HTML, and APIs improvements and many bug fixes.'
 
 date: 2025-12-15
