--- a/src/news/2025/12/scroll-state-scrolled/index.yml
+++ b/src/news/2025/12/scroll-state-scrolled/index.yml
@@ -1,5 +1,5 @@
 title: 'Directional CSS with `scroll-state(scrolled)`'
-alt: 'Directional CSS with scroll-state(scrolled).'
+alt: 'Illustration with arrows, a hand with a mouse, and abstract shapes above the headline “Directional CSS with scroll-state(scrolled)”, alongside a circular portrait.'
 description: 'CSS queries that react to scroll direction shipping in Chrome 144.'
 
 date: 2025-12-23
