--- a/src/news/2025/12/state-of-html-2025/index.yml
+++ b/src/news/2025/12/state-of-html-2025/index.yml
@@ -1,5 +1,5 @@
 title: 'Results of the State of HTML 2025 survey'
-alt: 'State of HTML 2025. Dr Lea Verou. HTML usage. All features. Which elements do you struggle the most.'
+alt: 'Graphic titled “State of HTML 2025” with large text “HTML Usage”, a navigation list including “Introduction”, “Features”, and “Usage”, and a chart showing agreement levels from “Strongly Disagree” to “Strongly Agree”.'
 description: 'Developers still value practical UI over flashy new tech.'
 
 date: 2025-12-17
