--- a/src/news/2025/12/your-url-is-your-state/index.yml
+++ b/src/news/2025/12/your-url-is-your-state/index.yml
@@ -1,5 +1,5 @@
 title: 'Your URL is your state'
-alt: 'Your URL is your state.'
+alt: 'Graphic titled “Your URL Is Your State”, showing a URL split into parts “http://www.example.com:80”, “/path/to/myfile.html”, “?key1=value1&key2=value2”, and “#SomewhereInTheDocument”, alongside JavaScript code for reading and updating URL parameters.'
 description: 'How thoughtful URL design turns links into powerful, shareable state for modern web apps.'
 
 date: 2025-12-26
