--- a/src/news/2025/12/anchor-close-dialog/index.yml
+++ b/src/news/2025/12/anchor-close-dialog/index.yml
@@ -1,5 +1,5 @@
 title: 'Getting a close button to hang off of a dialog'
-alt: 'Getting a close button to hang off of a dialog.'
+alt: 'Graphic with the headline “Getting a close button to hang off of a dialog”, showing a large X button, CSS code snippets, and a small framed avatar illustration.'
 description: 'Simpler dialogs with anchor-positioned close buttons.'
 
 date: 2025-12-25
