--- a/src/news/2025/12/html-in-epub/index.yml
+++ b/src/news/2025/12/html-in-epub/index.yml
@@ -1,5 +1,5 @@
 title: 'How HTML changes in ePub'
-alt: 'HTMHell. Div, role, table, span. How HTML changes in еPub.'
+alt: 'Graphic with a circular portrait labeled “HTMLhell”, surrounded by the words div, role, table, and span, and the subtitle “How HTML changes in ePub”.'
 description: 'How HTML and CSS behave inside ePub ebooks.'
 
 date: 2025-12-12
