Use single quotes

--- a/src/news/2025/11/monitoring-web-components-performance/index.yml
+++ b/src/news/2025/11/monitoring-web-components-performance/index.yml
@@ -1,6 +1,6 @@
-title: "Performance monitoring for web components"
-alt: "Performance monitoring for web components."
-description: "Using the User Timing API to track real-world component performance"
+title: 'Performance monitoring for web components'
+alt: 'Performance monitoring for web components.'
+description: 'Using the User Timing API to track real-world component performance'
 
 date: 2025-11-25
 link: https://allons-y.llc/posts/2025-11-23/
