--- a/src/news/2026/01/bundle-size-investigation/index.yml
+++ b/src/news/2026/01/bundle-size-investigation/index.yml
@@ -6,7 +6,7 @@ date: 2026-01-14
 link: https://www.developerway.com/posts/bundle-size-investigation
 
 tags:
-- perf
+- performance
 - js
 
 draft: true
