Create home page landing, add tag labels

--- a/netlify.toml
+++ b/netlify.toml
@@ -20,6 +20,16 @@
   status = 301
 
 [[redirects]]
+  from = "/tags/webcomponents/"
+  to = "/tags/web-components/"
+  status = 301
+
+[[redirects]]
+  from = "/page/*"
+  to = "/news/"
+  status = 301
+
+[[redirects]]
   from = "/*"
   to = "/404/index.html"
   status = 404
