--- a/src/news/2025/11/testing-light-dom-web-components/index.yml
+++ b/src/news/2025/11/testing-light-dom-web-components/index.yml
@@ -7,5 +7,5 @@ link: https://cloudfour.com/thinks/testing-html-light-dom-web-components-easier-
 
 tags:
 - js
-- webcomponents
+- web-components
 - testing
