--- a/src/news/2026/01/web-component-starter-template/index.yml
+++ b/src/news/2026/01/web-component-starter-template/index.yml
@@ -6,7 +6,7 @@ date: 2026-01-13
 link: https://www.aaron-gustafson.com/notebook/a-web-component-starter-template/
 
 tags:
-- webcomponents
+- web-components
 - tools
 - js
 - testing
