--- a/src/pages/tags/index.yml
+++ b/src/pages/tags/index.yml
@@ -9,4 +9,4 @@ pagination:
 permalink: /tags/{{ tag }}/index.html
 layout: page.njk
 eleventyComputed:
-  title: 'News with the “{{ tag }}” tag'
+  title: '{{ labels[tag] }} news'
