--- a/src/data/meta.yml
+++ b/src/data/meta.yml
@@ -2,3 +2,5 @@ title: Web Standards
 subtitle: Daily web platform news
 language: en
 domain: https://web-standards.dev
+author: Web Standards
+email: hi@web-standards.dev
