--- a/src/data/labels.yml
+++ b/src/data/labels.yml
@@ -2,7 +2,7 @@
 a11y: Accessibility
 ai: AI
 almanac: Almanac
-anchor: Anchor sositioning
+anchor: Anchor positioning
 animation: Animation
 baseline: Baseline
 browser: Browser
