--- a/src/pages/news/index.yml
+++ b/src/pages/news/index.yml
@@ -1,8 +1,9 @@
-layout: page.njk
 pagination:
-  data: collections.news
-  size: 12
-  reverse: true
-permalink: '{% if pagination.pageNumber > 0 %}/news/page/{{ pagination.pageNumber + 1 }}/{% else %}/news/{% endif %}index.html'
+  data: collections.newsPagination
+  size: 1
+  alias: newsPage
+  addAllPagesToCollections: true
+layout: page.njk
 eleventyComputed:
-  title: '{% if pagination.pageNumber > 0 %}All news — Page {{ pagination.pageNumber + 1 }}{% else %}All news{% endif %}'
+  permalink: '{{ newsPage.permalink }}'
+  title: '{{ newsPage.title }}'
