--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"stylelint": "stylelint \"src/**/*.css\"",
 		"eslint": "eslint",
 		"test": "npm run editorconfig && npm run stylelint && npm run eslint",
-		"stats": "node scripts/stats.js"
+		"feed": "node scripts/feed.js",
+		"social": "node scripts/social.js"
 	},
 	"engines": {
 		"node": ">=22"
@@ -30,6 +31,7 @@
 		"js-yaml": "^4.1.1",
 		"lightningcss": "^1.30.2",
 		"pagefind": "^1.4.0",
+		"puppeteer": "^24.36.1",
 		"stylelint": "^17.0.0",
 		"stylelint-config-pepelsbey": "^1.0.2",
 		"stylelint-order": "^7.0.1"
